--- a/Eclipse/Views/Home/Index.cshtml
+++ b/Eclipse/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@* Views/Home/Index.cshtml *@
+@* Views/Home/Index.cshtml *@
 @{
     ViewData["Title"] = "Home - Eclipse";
 }
@@ -17,11 +17,7 @@
     </div>
 </section>
 
-<section>
-    <div class="container-fluid p-0">
-        <img src="~/img/banner-2400x500.jpg" alt="banner cod" class="banner-high img-fluid w-100"/>
-    </div>
-</section>
+
 
 <h1 class="bottom-title text-center">Nossos Serviços</h1>
 
@@ -55,12 +51,12 @@
         <div class="row g-4 justify-content-center">
             <div class="col-md-4">
                 <div class="gallery-card glass-effect">
-                    <img src="img/p2.jpg" alt="Soft 1" class="img-fluid rounded">
+                    <img src="img/setuproxo2.jpg" alt="Soft 1" class="img-fluid rounded">
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="gallery-card glass-effect">
-                    <img src="img/p1.jpg" alt="Soft 2" class="img-fluid rounded">
+                    <img src="img/setuproxo.jpg" alt="Soft 2" class="img-fluid rounded">
                 </div>
             </div>
             <div class="col-md-4">
